feat: Prepare NuGet package release v1.0.0 with SQL Server version support and security fixes
Major changes:
- Add NuGet package metadata and MIT License for open source distribution
- Implement SQL Server version detection (2017 vs 2019+) for compatibility
- Fix SQL injection vulnerability in sensitivity classification SQL generation
- Migrate Web API project from ProjectReference to NuGet PackageReference
- Update documentation with version compatibility details

NuGet Package:
- Add PackageId, Version, Authors, Description, Tags, License (MIT)
- Configure repository URL and package readme inclusion
- Enable symbol package generation for debugging support
- Add LICENSE file (MIT License) for open source distribution

SQL Server Compatibility:
- Add automatic version detection using SERVERPROPERTY('ProductMajorVersion')
- SQL Server 2019+ (v15+): Full support (Sensitivity Classification + Extended Properties)
- SQL Server 2017 (v14): Partial support (Extended Properties only, safely skips unsupported commands)
- Wrap sensitivity classification commands in version guard to prevent errors on older versions

Security:
- Fix SQL injection vulnerability in AppendDropSensitivityClassification
- Properly escape objectName and columnName using GenerateSqlLiteral before embedding in SQL strings
- Use parameterized dynamic SQL execution via sp_executesql

Documentation:
- Update README with SQL Server version compatibility requirements
- Document version-aware SQL generation behavior
- Add License section with MIT License details

Project Structure:
- Update Web API project to use NuGet package instead of ProjectReference
- Remove obsolete migration files
- Clean up model files and add missing DataClassification attributes
- Update test cases to reflect version-aware SQL generation

Breaking Changes: None
- All changes are backward compatible
- Existing migrations continue to work

--- a/EFCore.DataClassification/EFCore.DataClassification.csproj
+++ b/EFCore.DataClassification/EFCore.DataClassification.csproj
@@ -4,6 +4,23 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    
+    <!-- NuGet Package Metadata -->
+    <PackageId>EFCore.DataClassification</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Talha Durusu</Authors>
+    <Description>Entity Framework Core 8 extension library for SQL Server data classification support. Automatically generates SQL Server sensitivity classification metadata and extended properties through migrations.</Description>
+    <PackageTags>EntityFrameworkCore;EFCore;EF;SQLServer;DataClassification;Sensitivity;Migrations;Security</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    
+    <RepositoryUrl>https://github.com/talhadurusu/EFCore.DataClassification_GraduaatProef</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageProjectUrl>https://github.com/talhadurusu/EFCore.DataClassification_GraduaatProef</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +29,11 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.22" />
+  </ItemGroup>
+
+  <!-- Include README.md in the package -->
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
 </Project>
